src/stylesheets/partials/_tile.scss
//
// Tile
// --------------------------------------------------

.tile {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  contain: strict;

  @each $size in $tile-thumbnail-sizes {
    [data-size="#{$size}"] & {
      $tile-size: #{round($size * $tile-factor)}px;

      height: $tile-size;

      .thumbnail,
      img {
        --size: #{$size};
        --width: var(--x) * var(--size) * 1px;
        --height: var(--y) * var(--size) * 1px;
        width: calc(var(--width));
        height: calc(var(--height));
        min-width: 24px;
        min-height: 22px;
      }

      .thumbnail {
        [class*="90"],
        [class*="270"] {
          img {
            --width: var(--y) * var(--size) * 1px;
            --height: var(--x) * var(--size) * 1px + 1px;
            min-width: 22px;
            min-height: 24px;
          }
        }
      }

      .rotation-container {
        width: #{$size}px;
        height: #{$size}px;
      }
    }
  }

  &.photo {
    contain: layout style size;
  }

  .tile-state {
    padding: 2px;
    border-radius: $border-radius-small;
    margin: -4px;
    position: relative;

    @include state(".tile.active") {
      border: 3px solid $tile-active-color;

      @include state(
        ".scroll-container:focus .tile.item",
        ".scroll-container:focus .tile.photo",
        ".selection-grid:focus .tile.selection"
      ) {
        border-color: $tile-focus-color;
      }
    }
  }

  .item-grid & {
    &.over {
      .tile-state {
        border: 3px solid $drop-target-color;
      }
    }
  }

  .icon-warningoverlay {
    position: absolute;
    left: 6px;
    top: 5px;
    pointer-events: none;
  }

  .btn-icon {
    position: absolute;
    right: 6px;
    bottom: 5px;
    padding: 0;

    .icon {
      color: $tile-selection-icon-color;
    }
  }

  .pointer {
    position: absolute;
    left: calc(50% - 10px);
    bottom: -$space-sm;
    width: 2 * $pointer-height;
    height: 2 * $pointer-height;
    border: $pointer-height solid transparent;
    border-bottom: $pointer-height solid $tile-expansion-bg;

    .photo-grid.nested-tab-focus:not(.has-nested-active) & {
      border-bottom-color: $tile-expansion-focus-bg;
    }

    .is-blurred .item-mode & {
      @if $platform == darwin {
        border-bottom-color: $tile-expansion-blurred-bg;
      }
    }
  }
}

.tile-expansion {
  grid-column-start: 1;
  background: $tile-expansion-bg;
  margin: $space-sm (-$default-padding-horizontal); // Todo
  padding: $space-sm 0; // Todo

  .photo-grid.nested-tab-focus:not(.has-nested-active) & {
    background: $tile-expansion-focus-bg;
  }

  .is-blurred .item-mode & {
    @if $platform == darwin {
      background-color: $tile-expansion-blurred-bg;
    }
  }
}

